--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__blob">
-                                    <img src="assets/images/cricket.png" alt="skills image">
+                                    <img src="assets/images/cricket.png" alt="skills image" class="cricket__img">
                                 </div>
 
-                                <h3 class="skills__name">Professional Cricket Player</h3>
+                                <h3 class="skills__name">Professional <br> Cricketer</h3>
                                 <span class="skills__subtitle">Advanced</span>
                             </div>
                         </div>
@@ -792,7 +792,6 @@
                         <i class="ri-instagram-fill"></i>
                     </a>
                 </ul>
-
             </div>
         </footer>
 
@@ -804,7 +803,7 @@
         
 
         <!--=============== SCROLLREVEAL ===============-->
-        <script src=""></script>
+        <script src="assets/js/scrollreveal.min.js"></script>
 
         <!--=============== SWIPER JS ===============-->
         <script src="assets/js/swiper-bundle.min.js"></script>
