projects links added

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                     <span class="projects__subtitle">Automation | Web App</span>
                                     <h1 class="projects__title">Automated Email Service</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -612,7 +612,7 @@
                                     <span class="projects__subtitle">Computer Vision</span>
                                     <h1 class="projects__title">AV/ADAS Self-Driving</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -625,7 +625,7 @@
                                     <span class="projects__subtitle">Django Web App</span>
                                     <h1 class="projects__title">Bug Tracker</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -638,7 +638,7 @@
                                     <span class="projects__subtitle">MERN App</span>
                                     <h1 class="projects__title">Inventory Management</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -651,7 +651,7 @@
                                     <span class="projects__subtitle">ANN | Deep Learning</span>
                                     <h1 class="projects__title">Image Recognition</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -664,7 +664,7 @@
                                     <span class="projects__subtitle">Raspberry Pi</span>
                                     <h1 class="projects__title">Home Automation System</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -677,7 +677,7 @@
                                     <span class="projects__subtitle">React App</span>
                                     <h1 class="projects__title">Youtube Clone</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
@@ -690,7 +690,7 @@
                                     <span class="projects__subtitle">Full stack Application</span>
                                     <h1 class="projects__title">Pantry Node</h1>
 
-                                    <a href="https://github.com/SANDESHSOBARAD" class="projects__button">
+                                    <a href="https://github.com/SANDESHSOBARAD" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-fill"></i>
                                     </a>
                                 </div>
