--- a/index.html
+++ b/index.html
@@ -472,7 +472,26 @@
                         <i class="ri-reactjs-line"></i>
 
                         <h2 class="services__title">
-                            Research Assistant <br>
+                            Frontend Developer <br>
+                            CloudVik, USA
+                        </h2>
+
+                        <p class="services__description">
+                            Designing and developing UI Components <br>
+                            -> ReactJs    <br>
+                            -> HTML/CSS <br>
+                            -> Javascript <br>
+                            -> CI/CD    <br>
+                            -> FIgma <br>
+                        </p>
+
+                        <div class="services__border"></div>
+                    </div>
+                    <div class="services__card">
+                        <i class="ri-reactjs-line"></i>
+
+                        <h2 class="services__title">
+                            Software Engineer <br>
                             CSU, Chico
                         </h2>
 
@@ -542,25 +561,7 @@
 
                         <div class="services__border"></div>
                     </div>
-                    <div class="services__card">
-                        <i class="ri-hard-drive-line"></i>
-
-                        <h2 class="services__title">
-                            Software Engineer Intern <br>
-                            Western Digital
-                        </h2>
-
-                        <p class="services__description">
-                            Led a comprehensive analysis of SSDs, focusing on power and performance. <br>
-                            -> C programming <br>
-                            -> Python (PyTest) <br>
-                            -> Power Optimization <br>
-                            -> BlackBox & whiteBox <br> Testing
-                            
-                        </p>
-
-                        <div class="services__border"></div>
-                    </div>
+                    
                     <div class="services__card">
                         <i class="ri-shape-fill"></i>
 
