--- a/index.html
+++ b/index.html
@@ -535,10 +535,10 @@
                         <p class="services__description">
                             Contributed to multiple web applications. <br>
                             -> ReactJs <br>
-                            -> VueJs <br>
-                            -> REST apis <br>
-                            -> HTML/CSS <br>
                             -> NodeJs <br>
+                            -> REST APIs <br>
+                            -> HTML/CSS <br>
+                            -> CI/CD, Docker <br>
                         </p>
 
                         <div class="services__border"></div>
