--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                         </h2>
 
                         <p class="services__description">
-                            Contributed to multiple web applications. <br>
+                            Migrated Monolithic to Microservices Architecture <br>
                             -> ReactJs <br>
                             -> NodeJs <br>
                             -> REST APIs <br>
@@ -552,11 +552,12 @@
                         </h2>
 
                         <p class="services__description">
-                            Designed and developed Hotel management system. <br>
-                            -> C# <br>
-                            -> .NET <br>
-                            -> MVC Framework <br>
-                            -> Oracle Database
+                            Streamlined Jenkins automated test suites, targeting reduction in manual testing <br>
+                            -> Python <br>
+                            -> Django <br>
+                            -> Jenkins, PyTorch <br>
+                            -> SQL <br>
+                            -> FastAPI
                         </p>
 
                         <div class="services__border"></div>
@@ -571,8 +572,7 @@
                         </h2>
 
                         <p class="services__description">
-                            Led a team of six and designed an algorithm to recognize
-                             different 2D shapes and succeeded with 93% accuracy. <br>
+                            Designed an algorithm to recognize 2D shapes with 93% accuracy. <br>
                              -> ANN <br>
                              -> Tensorflow <br>
                              -> Image Processing
